feat: swagger doc for retrieve transaction route
